fixed css on productCategories--added flex-wrap

--- a/src/components/productcategories/ProductCategory.css
+++ b/src/components/productcategories/ProductCategory.css
@@ -1,6 +1,7 @@
 .productDiv {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .card {
